# rh-archimedean-kernel-rigidity

./: CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
docs/: SETUP_GUIDE.md
experiments/: akcl_ci_artifact.json  akcl_conditional_exact_model.json  akcl_conditional_theorem_level_symbols.json  akcl_declared_pair.json  akcl_simulated_genuine_realization_candidate.json  akcl_syn_sample_report.json  gamma_decay_estimate.py
scripts/: export_akcl_conditional_exact_model.py  export_akcl_conditional_theorem_level_symbols.py  export_akcl_declared_pair.py  export_akcl_simulated_genuine_realization_candidate.py  replay_akcl_certificate.py  run_akcl_truth_suite.sh  run_repo_check.sh  verify_repo.py
tests/: test_akcl_admissible_class_literal.py  test_akcl_basis_density_literal.py  test_akcl_complement_coercivity_open_problem_literal.py  test_akcl_complement_defect_dominance_open_problem_literal.py  test_akcl_completion_snapshot_literal.py  test_akcl_completion_truth_sync.py  test_akcl_conditional_exact_model.py  test_akcl_conditional_theorem_level_symbols.py  test_akcl_constructive_scheme_literal.py  test_akcl_declared_pair_regression.py  test_akcl_deconditionalization_literals.py  test_akcl_defect_completion_literal.py  test_akcl_energy_completion_literal.py  test_akcl_genuine_realization_data_registry_literal.py  test_akcl_genuine_realization_frontier_literals.py  test_akcl_global_rigidity_upgrade_open_problem_literal.py  test_akcl_global_rigidity_upgrade_registry_literal.py  test_akcl_global_rigidity_upgrade_truth_sync.py  test_akcl_index_literal.py  (+26 more)
(+62 files in other folders)
